--- a/graphics/production/css/themes/default/main.css
+++ b/graphics/production/css/themes/default/main.css
@@ -5,7 +5,6 @@
 
 body {
     background: rgb(242,238,211);
-    min-width: 80em;
 }
 
 /* links */
@@ -35,6 +34,19 @@ h5 {
 }
 
 h6 {
+}
+
+/* Boxes
+----------------------------------------------*/
+.box {
+    background: white;
+    padding: 1em;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -o-border-radius: 16px;
+    padding-top:0.6em;
+    padding-bottom:0.6em;
+    margin-bottom: 1em;
 }
 
 /* colors
@@ -105,6 +117,8 @@ div.list + div.manage {
     font-size:bigger;
 }
 
+/* Spinner
+--------------------------------------------------*/
 .spinner {
     padding: 5px;
     position: absolute;
